samples/_failures_safe/1761689694_8eba81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12429ae8.c: In function ‘display_stats’:
./samples/SAFE/__tmp_12429ae8.c:130:33: error: expected declaration or statement at end of input
  130 | void display_stats(const struct LogAnalyzer *analyzer) {
      |                                 ^~~~~~~~~~~
